# photo-app

./: .gitignore  Cargo.toml
migrations/: 20230708183548_Generate_tables.sql
src/: api_key_manager.rs  database.rs  filters.rs  image_manager.rs  interface.rs  main.rs  models.rs  user_manager.rs
src/images/: image.rs  image_api.rs  image_repository.rs  mod.rs
src/keys/: key.rs  key_api.rs  key_generator.rs  key_interface.rs  key_repository.rs  mod.rs
src/users/: mod.rs  user.rs  user_api.rs  user_interface.rs  user_repository.rs
templates/: dashboard.html.tera  delete.html.tera  deleteapikey.html.tera  index.html.tera  login.html.tera  newapikey.html.tera  register.html.tera  settings.html.tera
