[package]
name = "cameron-photo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets"] }
rocket_dyn_templates = { version= "0.1.0-rc.3", features = ["tera"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = [ "full" ] }
sqlx = { features = [ "mysql", "runtime-tokio-native-tls" ] }
sqlx-mysql = "0.7.0"
strum = "0.25.0"
strum_macros = "0.25.1"
bcrypt = "0.15.0"

